src/test/ui/error-codes/E0254.stderr
error[E0254]: the name `alloc` is defined multiple times
  --> $DIR/E0254.rs:22:5
   |
14 | extern crate alloc;
   | ------------------- previous import of the extern crate `alloc` here
...
22 | use foo::alloc;
   |     ^^^^^^^^^^ `alloc` reimported here
   |
   = note: `alloc` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
22 | use foo::alloc as other_alloc;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0254"
